Do not try use fields examples is expression and fiend used or SET/ENUM field used in types merging procedure (BUG#5618)